--- a/package.json
+++ b/package.json
@@ -22,11 +22,8 @@
     "firebase-admin": "^12.1.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mysql": "^2.18.1",
-    "mysql2": "^2.2.5",
     "nodemailer": "^6.4.14",
-    "path": "^0.12.7",
-    "sequelize": "^6.3.5"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
