--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dbconnection",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,8 +22,11 @@
     "firebase-admin": "^12.1.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "nodemailer": "^6.4.14",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
