--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 PORT=8087
-HOST= localhost
+HOST= roundhouse.proxy.rlwy.net
 USER= root
 # PASSWORD=Rishi@1995
-PASSWORD=zymr@123
+PASSWORD=JOoJzryEeIVKFDQdrVBshDqDSFYhRrnY
 # PASSWORD=admin@123
-DB= nanak_db
+DB= railway
 dialect= mysql
 poolMax=5
 poolMin=0
